@@ -1,0 +1,17 @@
+/*==================================================
+ *  Exhibit Chart Extension Dutch localization
+ *==================================================
+ */
+ 
+if (!("l10n" in Exhibit.ScatterPlotView)) {
+    Exhibit.ScatterPlotView.l10n = {};
+}
+if (!("l10n" in Exhibit.PivotTableView)) {
+    Exhibit.PivotTableView.l10n = {};
+}
+
+Exhibit.ScatterPlotView.l10n.viewLabel = "Puntenwolk";
+Exhibit.ScatterPlotView.l10n.viewTooltip = "Bekijk items in een puntenwolk";
+
+Exhibit.PivotTableView.l10n.viewLabel = "Pivottabel";
+Exhibit.PivotTableView.l10n.viewTooltip = "Bekijk items met een pivottable";
